--- a/package.json
+++ b/package.json
@@ -13,6 +13,21 @@
     "@angular/platform-browser": "~19.1.0",
     "@angular/platform-browser-dynamic": "~19.1.0",
     "@angular/router": "~19.1.0",
+    "@capacitor/android": "^6.0.0",
+    "@capacitor/app": "^6.0.0",
+    "@capacitor/core": "^6.0.0",
+    "@capacitor/haptics": "^6.0.0",
+    "@capacitor/ios": "^6.0.0",
+    "@capacitor/keyboard": "^6.0.0",
+    "@capacitor/status-bar": "^6.0.0",
+    "@ionic/angular": "^8.0.0",
+    "@ng-icons/core": "^30.2.0",
+    "@ng-icons/huge-icons": "^30.2.0",
+    "@ng-icons/iconsax": "^30.2.0",
+    "@ng-icons/ionicons": "^30.2.0",
+    "@ng-icons/material-icons": "^30.2.0",
+    "@ng-icons/svgl": "^30.2.0",
+    "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "zone.js": "~0.15.0"
   },
@@ -23,14 +38,17 @@
     "@angular/cli": "~19.1.0",
     "@angular/compiler-cli": "~19.1.0",
     "@angular/language-service": "~19.1.0",
+    "@capacitor/cli": "^6.0.0",
     "@eslint/js": "^9.8.0",
-    "@nx/angular": "20.4.2",
+    "@nx/angular": "^20.4.2",
     "@nx/eslint": "20.4.2",
     "@nx/eslint-plugin": "20.4.2",
     "@nx/jest": "20.4.2",
     "@nx/js": "20.4.2",
     "@nx/web": "20.4.2",
     "@nx/workspace": "20.4.2",
+    "@nxext/capacitor": "^20.1.0",
+    "@nxext/ionic-angular": "^20.0.5",
     "@schematics/angular": "~19.1.0",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
@@ -39,17 +57,32 @@
     "@types/node": "18.16.9",
     "@typescript-eslint/utils": "^8.19.0",
     "angular-eslint": "^19.0.2",
+    "autoprefixer": "^10.4.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-preset-angular": "~14.4.0",
     "nx": "20.4.2",
+    "postcss": "^8.4.5",
     "prettier": "^2.6.2",
+    "tailwindcss": "^3.0.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.19.0"
+  },
+  "pnpm": {
+    "ignoredBuiltDependencies": [
+      "@parcel/watcher",
+      "lmdb",
+      "msgpackr-extract"
+    ],
+    "onlyBuiltDependencies": [
+      "@swc/core",
+      "esbuild",
+      "nx"
+    ]
   }
 }
