--- a/apps/foodx/package.json
+++ b/apps/foodx/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "foodx",
+  "name": "FoodX",
   "dependencies": {
     "@capacitor/ios": "../../node_modules/@capacitor/ios",
     "@capacitor/android": "../../node_modules/@capacitor/android"
