--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,11 +14,7 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {
-      "@my-omni-repo/mobile-customer-feature": [
-        "libs/mobile/customer/feature/src/index.ts"
-      ]
-    }
+    "paths": {}
   },
   "exclude": ["node_modules", "tmp"]
 }
